# dentistry-lead

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.sample  pyproject.toml  run.md  startup.sh
data/: leads_export.csv
src/: config.py  database.py  email_enrichment.py  enrich_existing_leads.py  main.py  models.py
src/outreach/: email_sender.py
src/outreach/templates/: email_step_0.txt  email_step_1.txt  email_step_2.txt  whatsapp_step_0.txt  whatsapp_step_1.txt  whatsapp_step_2.txt
src/scrapers/: googlemaps.py  website.py
